crates/php-parser/tests/snapshots/corpus__stmt_namespace_groupuseerrors_3.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "Foo",
                  "Bar"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 32,
                  "end": 41
                }
              },
              "alias": null,
              "span": {
                "start": 37,
                "end": 41
              }
            }
          ]
        }
      },
      "span": {
        "start": 28,
        "end": 43
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 43
  }
}
