crates/php-parser/tests/snapshots/corpus__stmt_namespace_nsafterhashbang.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "A"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 36,
              "end": 37
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 26,
        "end": 38
      }
    }
  ],
  "span": {
    "start": 19,
    "end": 38
  }
}
