crates/php-parser/tests/snapshots/corpus__stmt_namespace_outsidestmt_1.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Declare": {
          "directives": [
            [
              "A",
              {
                "kind": {
                  "String": "B"
                },
                "span": {
                  "start": 16,
                  "end": 19
                }
              }
            ]
          ],
          "body": null
        }
      },
      "span": {
        "start": 6,
        "end": 22
      }
    },
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "B"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 32,
              "end": 34
            }
          },
          "body": {
            "Braced": []
          }
        }
      },
      "span": {
        "start": 22,
        "end": 38
      }
    },
    {
      "kind": {
        "HaltCompiler": "\nHi!"
      },
      "span": {
        "start": 39,
        "end": 63
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 63
  }
}
